primera subidato do list con react

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -10,3 +10,59 @@
     import 'relative/path/to/stylesheet.scss';
 
 */
+.activo {
+    visibility: visible !important;
+}
+.cruz {
+    visibility: hidden;
+}
+.display-4{
+    font-size: 30px;
+    color: rgb(71, 71, 71);
+}
+.display-1{
+    color: rgb(71, 71, 71);
+}
+
+p {
+    margin : 0;
+}
+.cajita1 {
+    width: 98%;
+}
+.cajita2 {
+    width: 96%;
+}
+.container{
+    background-color: rgb(238, 238, 238);
+}
+body {
+    background-color: rgb(238, 238, 238);
+}
+.blanco {
+    background-color: white;
+}
+.outlinenone {
+    outline: none !important;
+    border: 0 !important;
+    outline-offset: 0 !important;
+    width: 100%;
+}
+.btn:focus{
+    border: none;
+    box-shadow: none;
+    outline: none !important;
+}
+.btn:active{
+    border: none;
+    box-shadow: none;
+    outline: none !important;
+}
+
+.btn{
+    border: none;
+    box-shadow: none;
+    outline: none !important;
+    width: 40px;
+    height: 40px;
+}
